# GraminHub

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  vercel.json
api/: index.py
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_add_v2_core_tables.py  0002_add_price_unit_type_to_supplier_services.py  0003_add_str_value_to_site_settings.py
backend/app/: conftest.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  bookings.py  public.py  suppliers.py  users.py
backend/app/core/: config.py  exceptions.py  logging_config.py  request_context.py  security.py  seo_keywords.py
backend/app/domains/: __init__.py
backend/app/infrastructure/: __init__.py  db.py
backend/app/models/: __init__.py  booking.py  call_log.py  category.py  otp_challenge.py  review.py  site_setting.py  supplier.py  user.py
backend/app/schemas/: booking_schema.py  review_schema.py  site_setting_schema.py  supplier_schema.py  user_schema.py
backend/app/services/: booking_service.py  call_service.py  otp_delivery_service.py  otp_service.py  review_service.py  site_setting_service.py  supplier_service.py  user_service.py
backend/app/shared/: __init__.py  errors.py  policies.py  roles.py  tenancy.py
backend/app/templates/: admin_dashboard.html  base.html  home.html  login.html  privacy.html  profile.html  register.html  supplier_dashboard.html
docs/: OWNER_ADMIN_GUIDE.md  UI_VERIFICATION_CHECKLIST.md
scripts/: e2e.sh  e2e_v2.sh  seed_demo.sql  seed_demo.sql.example
(+89 files in other folders)
