[project]
name = "graminhub"
version = "0.1.0"
description = "GraminHub marketplace backend for Vercel deployment"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "psycopg2-binary==2.9.9",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "python-jose==3.3.0",
  "jinja2==3.1.4",
  "alembic==1.13.3",
  "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
namespaces = false
